Algorithm 2 was added

--- a/main.ipynb
+++ b/main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,12 +61,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data\n"
+    "# Data\n",
+    "\n",
+    "**Note:** Due to confidentiality, only the head of the data can be displayed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
        "[160816 rows x 7 columns]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +133,10 @@
     "    torch.manual_seed(seed)\n",
     "    torch.cuda.manual_seed(seed)\n",
     "    torch.backends.cudnn.deterministic = True\n",
-    "    torch.backends.cudnn.benchmark = False"
+    "    torch.backends.cudnn.benchmark = False\n",
+    "\n",
+    "\n",
+    "set_seed(42)"
    ]
   },
   {
@@ -159,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,11 +706,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorithm 2: Feature Extraction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class featureExtraction:\n",
+    "\n",
+    "    def __init__(self, data, pivotIndexs, patternTrend, selectedColumn, path, seperatingCriteria=False):\n",
+    "        self.data = data\n",
+    "        self.pivotIndexes = pivotIndexs\n",
+    "        self.allPatternTrand = patternTrend\n",
+    "        self.selectedColumn = selectedColumn\n",
+    "        self. path = path\n",
+    "        self.seperatingCriteria = seperatingCriteria\n",
+    "        self.finalResults = []\n",
+    "\n",
+    "        self. samePatternElimination()\n",
+    "        self.patternClustring()\n",
+    "        self.upOrDownBetweenEahLine()\n",
+    "\n",
+    "        if self.seperatingCriteria:\n",
+    "            self.seperateDataToDifferentGroup()\n",
+    "\n",
+    "    def meanAndStdCalculationInSpecificPeriod(self, firstIndex, secondIndex):\n",
+    "        selectedDataSet = self.data.iloc[firstIndex:secondIndex]\n",
+    "        \n",
+    "        # Vectorized calculations instead of looping\n",
+    "        # closeDiffs = np.abs(selectedDataSet['Close'] - selectedDataSet['Open'])\n",
+    "        highDiffs = np.abs(selectedDataSet['High'] - np.maximum(selectedDataSet['Close'], selectedDataSet['Open']))\n",
+    "        lowDiffs = np.abs(selectedDataSet['Low'] - np.minimum(selectedDataSet['Close'], selectedDataSet['Open']))\n",
+    "\n",
+    "        return [\n",
+    "            # closeDiffs.mean(), closeDiffs.std(),\n",
+    "            highDiffs.mean(), highDiffs.std(),\n",
+    "            lowDiffs.mean(), lowDiffs.std()\n",
+    "        ]\n",
+    "\n",
+    "    def upOrDownBetweenEahLine(self):\n",
+    "        # Use vectorized calculation for up/down\n",
+    "        self.totalUpOrDown = (self.data['Close'] > self.data['Open']).astype(int)\n",
+    "\n",
+    "        assert len(self.codedTrends) == len(self.pivotIndexes), \"The lengths of the lists are not equal\"\n",
+    "\n",
+    "        for patternIndex, pattern in enumerate(self.pivotIndexes):\n",
+    "            # features = [self.codedTrends[patternIndex]]\n",
+    "            features = list()\n",
+    "            for number in range(len(pattern) - 1):\n",
+    "                firstIndex = pattern[number]\n",
+    "                secondIndex = pattern[number + 1]\n",
+    "\n",
+    "                lenOfLine = secondIndex - firstIndex\n",
+    "                features.append(lenOfLine)\n",
+    "                \n",
+    "                # Vectorized sum and ratio for up/down calculations\n",
+    "                upDownRatio = np.sum(self.totalUpOrDown[firstIndex:secondIndex]) / lenOfLine\n",
+    "                features.append(round(upDownRatio, 2))\n",
+    "                \n",
+    "                # Ratio between secondValue and firstValue\n",
+    "                firstValue = self.data[self.selectedColumn][firstIndex]\n",
+    "                secondValue = self.data[self.selectedColumn][secondIndex]\n",
+    "                features.append(round(secondValue / firstValue, 3))\n",
+    "\n",
+    "                # Add mean and std features\n",
+    "                features += self.meanAndStdCalculationInSpecificPeriod(firstIndex, secondIndex)\n",
+    "\n",
+    "            self.finalResults.append(features)\n",
+    "\n",
+    "    def patternClustring(self):\n",
+    "        increasingGroup, decreasingGroup = [], []\n",
+    "        self.codedTrends = []\n",
+    "\n",
+    "        for item in self.allPatternTrand:\n",
+    "            numbers = sorted([int(char) for char in item])\n",
+    "            if item.index(str(numbers[-1])) > item.index(str(numbers[-2])) and item not in increasingGroup:\n",
+    "                increasingGroup.append(item)\n",
+    "            if item.index(str(numbers[-1])) < item.index(str(numbers[-2])) and item not in decreasingGroup:\n",
+    "                decreasingGroup.append(item)\n",
+    "\n",
+    "        differentClass = decreasingGroup + increasingGroup\n",
+    "        dateString = dt.datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "        filename = f\"differentClass_{dateString}.npy\"\n",
+    "        np.save(self. path + f'{filename}', differentClass)\n",
+    "\n",
+    "        for item in self.allPatternTrand:\n",
+    "            self.codedTrends.append(differentClass.index(item) + 1)\n",
+    "\n",
+    "    def seperateDataToDifferentGroup(self):\n",
+    "        dataForSeperationCheck = self.data.copy()\n",
+    "        dataForSeperationCheck['day'] = dataForSeperationCheck['Date'].dt.day\n",
+    "        dataForSeperationCheck['month'] = dataForSeperationCheck['Date'].dt.month\n",
+    "        dataForSeperationCheck['year'] = dataForSeperationCheck['Date'].dt.year\n",
+    "\n",
+    "        if self.seperatingCriteria == 'day':\n",
+    "            self.groupedData = dataForSeperationCheck.groupby(['year', 'month', 'day'])\n",
+    "        elif self.seperatingCriteria == 'month':\n",
+    "            self.groupedData = dataForSeperationCheck.groupby(['year', 'month'])\n",
+    "        elif self.seperatingCriteria == 'year':\n",
+    "            self.groupedData = dataForSeperationCheck.groupby('year')\n",
+    "\n",
+    "        endOfEachItemIndexs = [item.index[-1] for _, item in self.groupedData]\n",
+    "        endOfEachStructure = np.array([item[-1] for item in self.pivotIndexes])\n",
+    "\n",
+    "        self.numberOfItemsInEachCriterai = []\n",
+    "        for idx, item in enumerate(endOfEachItemIndexs):\n",
+    "            if idx == 0:\n",
+    "                self.numberOfItemsInEachCriterai.append(len(endOfEachStructure[endOfEachStructure <= item]))\n",
+    "            else:\n",
+    "                condition = (endOfEachItemIndexs[idx - 1] <= endOfEachStructure) & (endOfEachStructure < item)\n",
+    "                self.numberOfItemsInEachCriterai.append(np.sum(condition))\n",
+    "\n",
+    "        self.optimalPatternNumberIn = np.mean(self.numberOfItemsInEachCriterai)\n",
+    "        print(self.numberOfItemsInEachCriterai)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    def samePatternElimination(self):\n",
+    "        pass\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
